--- a/.env
+++ b/.env
@@ -1,9 +1,7 @@
-PORT=5434
-
-PGHOST=localhost
-PGUSERNAME=admin
-PGPASSWORD=Gigagrocer12#
-PGPORT=5434
-DATABASE_URL=
+PGHOST='postgres'
+PGUSERNAME='postgres'
+PGPASSWORD='postgres'
+PGPORT=5432
+DATABASE_URL='my_db'
 
 SECRET=Hw4iVP35K%C7
